WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243376
[libpas] Adjust libpas PAS_API visibility
https://bugs.webkit.org/show_bug.cgi?id=243376
Summary
[libpas] Adjust libpas PAS_API visibility
Patrick Griffis
Reported
2022-07-30 11:48:43 PDT
Tested on main with a clean debug build in flatpak (`build-webkit --gtk --debug`). Reverting this commit fixes it. [1550/2117] Linking CXX executable bin/TestWebKitAPI/TestWebCore FAILED: bin/TestWebKitAPI/TestWebCore : && /usr/bin/c++ -fdiagnostics-color=always -Wextra -Wall -pipe -Wno-odr -Wno-stringop-overread -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wcast-align -Wno-tautological-compare -fno-strict-aliasing -fno-exceptions -fno-rtti -gsplit-dwarf -g -fuse-ld=lld -Wl,--disable-new-dtags -Wl,--gdb-index @CMakeFiles/TestWebCore.rsp -o bin/TestWebKitAPI/TestWebCore && : ld.lld: error: undefined symbol: pas_ensure_heap_slow >>> referenced by pas_heap_ref.h:65 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_heap_ref.h:65) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_ensure_heap) >>> referenced by pas_heap_ref.h:65 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_heap_ref.h:65) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_ensure_heap) >>> referenced by pas_heap_ref.h:65 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_heap_ref.h:65) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeySession.cpp.o:(pas_ensure_heap) >>> referenced 188 more times ld.lld: error: undefined symbol: pas_panic_on_out_of_memory_error >>> referenced by pas_allocation_result.h:106 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_allocation_result.h:106) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_allocation_result_crash_on_error) >>> referenced by pas_allocation_result.h:106 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_allocation_result.h:106) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_allocation_result_crash_on_error) >>> referenced by pas_allocation_result.h:106 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_allocation_result.h:106) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeySession.cpp.o:(pas_allocation_result_crash_on_error) >>> referenced 188 more times ld.lld: error: undefined symbol: pas_segregated_heap_medium_allocator_index_for_index >>> referenced by pas_segregated_heap.h:250 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_segregated_heap.h:250) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_segregated_heap_allocator_index_for_index) >>> referenced by pas_try_allocate_intrinsic.h:134 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_try_allocate_intrinsic.h:134) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_try_allocate_intrinsic_impl_casual_case) >>> referenced by pas_segregated_heap.h:250 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_segregated_heap.h:250) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_segregated_heap_allocator_index_for_index) >>> referenced 379 more times ld.lld: error: undefined symbol: pas_thread_local_cache_fast_tls >>> referenced by pas_thread_local_cache.h:104 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:104) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_thread_local_cache_try_get_impl) >>> referenced by pas_thread_local_cache.h:104 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:104) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_thread_local_cache_try_get_impl) >>> referenced by pas_thread_local_cache.h:104 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:104) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeySession.cpp.o:(pas_thread_local_cache_try_get_impl) >>> referenced 188 more times ld.lld: error: undefined symbol: pas_thread_local_cache_get_local_allocator_slow >>> referenced by pas_thread_local_cache.h:271 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:271) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_thread_local_cache_get_local_allocator_for_possibly_uninitialized_but_not_unselected_index) >>> referenced by pas_thread_local_cache.h:271 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:271) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_thread_local_cache_get_local_allocator_for_possibly_uninitialized_but_not_unselected_index) >>> referenced by pas_thread_local_cache.h:271 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:271) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeySession.cpp.o:(pas_thread_local_cache_get_local_allocator_for_possibly_uninitialized_but_not_unselected_index) >>> referenced 188 more times ld.lld: error: undefined symbol: pas_thread_local_cache_get_local_allocator_if_can_set_cache_for_possibly_uninitialized_index_slow >>> referenced by pas_thread_local_cache.h:346 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:346) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_thread_local_cache_get_local_allocator_if_can_set_cache_for_possibly_uninitialized_index) >>> referenced by pas_thread_local_cache.h:346 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:346) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_thread_local_cache_get_local_allocator_if_can_set_cache_for_possibly_uninitialized_index) >>> referenced by pas_thread_local_cache.h:346 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_thread_local_cache.h:346) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeySession.cpp.o:(pas_thread_local_cache_get_local_allocator_if_can_set_cache_for_possibly_uninitialized_index) >>> referenced 188 more times ld.lld: error: undefined symbol: bmalloc_megapage_table >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_heap_config_fast_megapage_kind) >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(bmalloc_heap_config_fast_megapage_kind) >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeySession.cpp.o:(bmalloc_heap_config_fast_megapage_kind) >>> referenced 188 more times ld.lld: error: undefined symbol: bmalloc_medium_page_header_table >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_heap_config_page_header) >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_medium_segregated_page_header_for_boundary) >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_medium_segregated_boundary_for_page_header) >>> referenced 952 more times ld.lld: error: undefined symbol: bmalloc_marge_page_header_table >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_heap_config_page_header) >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_marge_bitfit_page_header_for_boundary) >>> referenced by bmalloc_heap_config.h:82 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_config.h:82) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_marge_bitfit_boundary_for_page_header) >>> referenced 570 more times ld.lld: error: undefined symbol: pas_debug_heap_memalign >>> referenced by pas_debug_heap.h:97 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_debug_heap.h:97) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_debug_heap_allocate) >>> referenced by pas_debug_heap.h:97 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_debug_heap.h:97) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_debug_heap_allocate) >>> referenced by pas_debug_heap.h:97 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_debug_heap.h:97) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeySession.cpp.o:(pas_debug_heap_allocate) >>> referenced 188 more times ld.lld: error: undefined symbol: pas_debug_heap_malloc >>> referenced by pas_debug_heap.h:101 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_debug_heap.h:101) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_debug_heap_allocate) >>> referenced by pas_debug_heap.h:101 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_debug_heap.h:101) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_debug_heap_allocate) >>> referenced by pas_debug_heap.h:101 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_debug_heap.h:101) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeySession.cpp.o:(pas_debug_heap_allocate) >>> referenced 188 more times ld.lld: error: undefined symbol: pas_debug_heap_is_enabled >>> referenced by pas_local_allocator_inlines.h:1818 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_local_allocator_inlines.h:1818) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_local_allocator_try_allocate) >>> referenced by pas_try_allocate_intrinsic.h:103 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_try_allocate_intrinsic.h:103) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(pas_try_allocate_intrinsic_impl_casual_case) >>> referenced by pas_local_allocator_inlines.h:1818 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/pas_local_allocator_inlines.h:1818) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/encryptedmedia/MediaKeyMessageEvent.cpp.o:(pas_local_allocator_try_allocate) >>> referenced 379 more times ld.lld: error: undefined symbol: bmalloc_allocator_counts >>> referenced by bmalloc_heap_inlines.h:48 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:48) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_impl_impl_fast) >>> referenced by bmalloc_heap_inlines.h:48 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:48) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_impl_impl_slow) >>> referenced by bmalloc_heap_inlines.h:60 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:60) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_with_alignment_impl_impl_fast) >>> referenced 4581 more times ld.lld: error: undefined symbol: bmalloc_intrinsic_runtime_config >>> referenced by bmalloc_heap_inlines.h:48 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:48) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_impl_impl_slow) >>> referenced by bmalloc_heap_inlines.h:60 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:60) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_with_alignment_impl_impl_slow) >>> referenced by bmalloc_heap_inlines.h:70 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:70) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_allocate_impl_impl_slow) >>> referenced 761 more times ld.lld: error: undefined symbol: bmalloc_common_primitive_heap_support >>> referenced by bmalloc_heap_inlines.h:48 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:48) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_impl_casual_case) >>> referenced by bmalloc_heap_inlines.h:48 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:48) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_impl_inline_only) >>> referenced by bmalloc_heap_inlines.h:60 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:60) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_with_alignment_impl_casual_case) >>> referenced 1525 more times ld.lld: error: undefined symbol: bmalloc_common_primitive_heap >>> referenced by bmalloc_heap_inlines.h:48 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:48) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_impl_casual_case) >>> referenced by bmalloc_heap_inlines.h:60 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:60) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_with_alignment_impl_casual_case) >>> referenced by bmalloc_heap_inlines.h:70 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:70) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_allocate_impl_casual_case) >>> referenced 761 more times ld.lld: error: undefined symbol: bmalloc_typed_runtime_config >>> referenced by bmalloc_heap_inlines.h:165 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:165) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_iso_allocate_impl_impl_slow) >>> referenced by bmalloc_heap_inlines.h:172 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:172) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_iso_allocate_impl_impl_slow) >>> referenced by bmalloc_heap_inlines.h:200 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:200) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_iso_allocate_array_impl_impl_slow) >>> referenced 1143 more times ld.lld: error: undefined symbol: bmalloc_flex_runtime_config >>> referenced by bmalloc_heap_inlines.h:355 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:355) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_flex_impl_impl_slow) >>> referenced by bmalloc_heap_inlines.h:355 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:355) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_flex_impl_casual_case) >>> referenced by bmalloc_heap_inlines.h:362 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:362) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_allocate_flex_impl_impl_slow) >>> referenced 761 more times ld.lld: error: undefined symbol: bmalloc_primitive_runtime_config >>> referenced by bmalloc_heap_inlines.h:458 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:458) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_auxiliary_impl_impl_slow) >>> referenced by bmalloc_heap_inlines.h:458 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:458) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_try_allocate_auxiliary_impl_casual_case) >>> referenced by bmalloc_heap_inlines.h:465 (/app/webkit/WebKitBuild/Debug/bmalloc/Headers/bmalloc/bmalloc_heap_inlines.h:465) >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(bmalloc_allocate_auxiliary_impl_impl_slow) >>> referenced 761 more times ld.lld: error: undefined symbol: bmalloc_heap_config >>> referenced by GamepadEvent.cpp >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(.data+0x0) >>> referenced by GamepadEvent.cpp >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(.data+0x40) >>> referenced by GamepadEvent.cpp >>> Source/WebCore/CMakeFiles/WebCore.dir/./Modules/gamepad/GamepadEvent.cpp.o:(.data+0x48) >>> referenced 2098 more times ld.lld: error: too many errors emitted, stopping now (use -error-limit=0 to see all errors) collect2: error: ld returned 1 exit status
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-07-30 18:33:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2879
EWS
Comment 2
2022-07-30 21:02:11 PDT
Committed
252977@main
(6f313a256c8b): <
https://commits.webkit.org/252977@main
> Reviewed commits have been landed. Closing PR #2879 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug