[libpas] Adjust libpas PAS_API visibility https://bugs.webkit.org/show_bug.cgi?id=243376

Reviewed by Ross Kirsling.

Align visibility to BExport.h. Since libpas IsoHeap implementation is built
in the including side, we need to expose PAS_API functions.

* Source/bmalloc/libpas/src/libpas/pas_utils_prefix.h:
* Tools/WebKitTestRunner/CMakeLists.txt:

Canonical link: https://commits.webkit.org/252977@main